styles.css
*,
*:before,
*:after {
  box-sizing: border-box;
}

/*************/
/* TAG NAMES */
/*************/

html,
body {
  margin: 0;
  height: 100%;
}

body {
  display: grid;
  place-items: center;
  font-family: monospace;
  background: #222;
  color: white;
}

h1 {
  color: #252525;
  position: fixed;
  margin: 0;
  top: -0.45ch;
  left: -0.5ch;
  font-family: sans-serif;
  font-weight: 900;
  font-size: 20em;
  z-index: -1;
  line-height: 0.75;
  user-select: none;
}

a,
a:visited {
  color: cornflowerblue;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

li {
  display: flex;
  color: gold;

  &:not(:last-child):after {
    content: ',';
    color: white;
  }
}

/******************/
/* ATOMIC CLASSES */
/******************/

.magenta {
  color: magenta;
}

.turquoise {
  color: turquoise;
}

.mediumpurple {
  color: mediumpurple;
}

.gold {
  color: gold;
}

.bold {
  font-weight: 900;
}

/******************/
/* CUSTOM CLASSES */
/******************/

.container {
  display: flex;
  flex-direction: column;
  gap: 0.5ch;
  padding: 1em;
}

.section-with-array,
.section-array {
  display: flex;
  gap: 1ch;
}

/***********/
/* TOOLTIP */
/***********/

.tooltip {
  position: relative;

  &:hover {
    .tooltip-text {
      visibility: visible;
      opacity: 1;
    }
  }
}

.tooltip-item {
  position: relative;
  cursor: pointer;

  &:after {
    content: '';
    position: absolute;
    top: calc(100% + 0.1em);
    left: 0;
    width: 100%;
    border-bottom: 1px dashed;
  }
}

.tooltip-text {
  position: absolute;
  width: 320px;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.2s ease, visibility 0.2s ease;
  background: rgba(0, 0, 0, 0.7);
  backdrop-filter: blur(2px);
  border-radius: 1ch;
  border: 1px solid #333;
  padding: 1em;
  color: white;
  font-family: sans-serif;
  font-weight: 100;
  z-index: 1;

  /* This positions the tooltip on the top by default. */
  transform: translateY(-100%);
  top: 0;
}

/*****************/
/* MEDIA QUERIES */
/*****************/

@media only screen and (max-width: 480px) {
  h1 {
    font-size: 8em;
  }

  .tooltip-text {
    width: calc(100% - 2em);
    left: 1em;
  }
}

@media only screen and (max-width: 1024px) {
  ul,
  section {
    flex-direction: column;
  }

  li {
    padding-left: 2ch;

    /* Trailing comma for vertical arrays. */
    &:after {
      content: ',';
      color: white;
    }
  }

  .container {
    gap: 1em;
  }

  .section-with-array,
  .section-array {
    gap: 0.5ch;
  }

  .tooltip-item:after {
    top: 100%;
  }
}

